@@ -30,21 +30,19 @@ import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.layout.FlowPane;
 import javafx.stage.Stage;
-import jloda.fx.util.FileOpenManager;
-import jloda.fx.util.MemoryUsage;
-import jloda.fx.util.ProgramProperties;
-import jloda.fx.util.StatementFilter;
+import jloda.fx.util.*;
 import jloda.fx.window.IMainWindow;
 import jloda.fx.window.MainWindowManager;
 import jloda.phylo.PhyloTree;
 import jloda.util.FileUtils;
 import phylosketch.io.FileOpener;
+import phylosketch.io.NewickFileFilter;
 import phylosketch.io.PhyloSketchFileFilter;
 import phylosketch.main.PhyloSketch;
 import phylosketch.view.DrawPane;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 /**
@@ -95,7 +93,7 @@ public class MainWindow implements IMainWindow {
             statusPane = controller.getBottomFlowPane();
         }
 
-        FileOpenManager.setExtensions(Collections.singletonList(PhyloSketchFileFilter.getInstance()));
+        FileOpenManager.setExtensions(List.of(PhyloSketchFileFilter.getInstance(), NewickFileFilter.getInstance(), TextFileFilter.getInstance()));
         FileOpenManager.setFileOpener(new FileOpener());
 
         final InvalidationListener listener = (e -> {
